--- a/.github/workflows/seo-bot.yml
+++ b/.github/workflows/seo-bot.yml
@@ -2,7 +2,7 @@ name: Freelankarx SEO Automation
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Every 15 minutes
+    - cron: '*/15 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -10,41 +10,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: 📦 Install Python Dependencies
+      - name: Install dependencies
         run: pip install jinja2
 
-      - name: 📁 Show folder structure
+      - name: List repo files
         run: |
-          echo "Root directory:"
+          echo "Root:"
           ls -la
-          echo "Templates directory:"
-          ls -la templates
-          echo "Output directory:"
-          ls -la output || echo "⚠️ Output folder missing."
+          echo "Templates:"
+          ls -la templates || echo "Missing templates"
+          echo "Output:"
+          ls -la output || echo "Missing output"
 
-      - name: 🚀 Run generator.py
+      - name: Run generator script
         run: |
-          echo "Running generator.py..."
-          python generator.py || (echo "❌ generator.py failed!" && exit 1)
+          python generator.py || (echo "Script failed" && exit 1)
 
-      - name: ⚙️ Git configuration
+      - name: Git config
         run: |
           git config --global user.name "Freelankarx SEO Bot"
           git config --global user.email "seo-bot@freelankarx.io"
 
-      - name: 💾 Commit changes if any
+      - name: Commit and push changes
         run: |
           git add output/
-          if git diff --cached --quiet; then
-            echo "✅ No changes to commit."
-          else
-            git commit -m "🚀 Auto-generate SEO pages: $(date)"
-            git push
+          git diff --cached --quiet && echo "No changes to commit" || (git commit -m "SEO update $(date)" && git push)
