--- a/.github/workflows/seo-bot.yml
+++ b/.github/workflows/seo-bot.yml
@@ -47,12 +47,10 @@ jobs:
           git config --global user.name "Freelankarx SEO Bot"
           git config --global user.email "seo-bot@freelankarx.io"
 
-      - name: Commit and push changes
+      - name: Commit and Push changes
         run: |
+          git config pull.rebase false
+          git pull origin main || true
           git add output/
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "SEO update $(date)"
-            git push
-          fi
+          git commit -m "SEO update $(date -u)" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/Freelankarx/Freelankarx.git HEAD:main
