--- a/.github/workflows/seo-bot.yml
+++ b/.github/workflows/seo-bot.yml
@@ -10,6 +10,9 @@ permissions:
 
 jobs:
   build-and-deploy:
+    concurrency:
+      group: seo-job
+      cancel-in-progress: false
     runs-on: ubuntu-latest
 
     steps:
