--- a/.github/workflows/seo-bot.yml
+++ b/.github/workflows/seo-bot.yml
@@ -1,47 +1,59 @@
-name: SEO Bot Sitemap Generator
+name: Freelankarx SEO Automation
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 3 * * *'  # Runs daily at 3:00 AM UTC
+    - cron: '*/15 * * * *'
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
-  build:
+  build-and-deploy:
+    concurrency:
+      group: seo-job
+      cancel-in-progress: false
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: '3.10'
 
-      - name: Generate Sitemap
+      - name: Install dependencies
         run: |
-          mkdir -p output
-          echo '<?xml version="1.0" encoding="UTF-8"?>' > sitemap.xml
-          echo '<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">' >> sitemap.xml
-          
-          echo '<url><loc>https://freelankarx.com/</loc></url>' >> sitemap.xml
-          echo '<url><loc>https://freelankarx.com/blog/</loc></url>' >> sitemap.xml
+          pip install jinja2
 
-          for file in output/*.html; do
-            filename=$(basename "$file")
-            echo "<url><loc>https://freelankarx.com/output/$filename</loc></url>" >> sitemap.xml
-          done
-
-          echo '</urlset>' >> sitemap.xml
-
-      - name: Commit and Push Sitemap
+      - name: List repo files
         run: |
-          git config user.name "Freelankarx SEO Bot"
-          git config user.email "info@freelankarx.com"
-          git add sitemap.xml
-          git commit -m "Updated sitemap.xml" || echo "No changes to commit"
-          git push
+          echo "Root directory contents:"
+          ls -la
+          echo "Templates directory:"
+          ls -la templates || echo "Templates directory not found"
+          echo "Output directory:"
+          ls -la output || echo "Output directory not found"
 
-      - name: Ping Google
+      - name: Run generator script
         run: |
-          curl "https://www.google.com/ping?sitemap=https://freelankarx.com/sitemap.xml"
+          python generator.py
+          if [ $? -ne 0 ]; then
+            echo "generator.py failed"
+            exit 1
+          fi
+
+      - name: Git config
+        run: |
+          git config --global user.name "Freelankarx SEO Bot"
+          git config --global user.email "seo-bot@freelankarx.io"
+
+      - name: Commit and Push changes
+        run: |
+          git config pull.rebase false
+          git pull origin main || true
+          git add output/
+          git commit -m "SEO update $(date -u)" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/Freelankarx/Freelankarx.git HEAD:main
