--- a/.github/workflows/seo-bot.yml
+++ b/.github/workflows/seo-bot.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Cache
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
